change color in flex wrap, and fix grmmar

--- a/introduction/css/flexbox.css
+++ b/introduction/css/flexbox.css
@@ -17,5 +17,5 @@
 }
 
 .yellow {
-  background-color: lightyellow;
+  background-color: rgb(81, 145, 179);
 }
